--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "mongodb": "^4.2.2",
     "next": "12.0.1",
     "react": "17.0.2",
+    "react-bootstrap": "^2.0.4",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
